fix nav on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body {
   bottom: 0;
   margin: 0;
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
-  min-width: 400px;
+  min-width: 300px;
 }
 
 ul  {
